# Demo

./: .gitattributes  .gitignore  README.md  pyproject.toml
demo/apps/home/: context.py  forms.py  models.py  output.py  views.py
demo/apps/home/fixtures/: home.json
demo/apps/home/migrations/: 0001_initial.py
demo/apps/home/templates/home/: index.html
demo/apps/home/templatetags/: template_tags.py
demo/apps/user/: middleware.py  models.py  urls.py  views.py
demo/apps/user/migrations/: 0001_initial.py
demo/apps/user/templates/user/: connexion.html
demo/demo/: urls.py
demo/demo/settings/: __init__.py  base.py
demo/templates/: base.html
demo/theme/static_src/: package-lock.json  package.json
demo/theme/static_src/src/: styles.css
